# soundscope

./: .gitignore  Cargo.toml  Changes.md  LICENSE  README.md  audio_info.txt  output.txt
.github/workflows/: release-dry.yml  release.yml  rust.yml
src/: analyzer.rs  app.rs  audio_capture.rs  audio_player.rs  builtin_themes.rs  fft.rs  file_reader.rs  main.rs  tui.rs
