[package]
name = "soundscope"
version = "1.8.1"
edition = "2024"
description = "A command-line tool for analyzing audio files and real-time input (FFT, LUFS)"
repository = "https://github.com/bananaofhappiness/soundscope"
license = "MIT"
readme = "README.md"
keywords = ["audio", "command-line", "cli"]

[dependencies]
cpal = "0.16.0"
crossbeam = "0.8.4"
crossterm = "0.29.0"
dirs = "6.0.0"
ebur128 = "0.1.10"
eyre = "0.6.12"
ratatui = {version = "0.30.0", features = ["serde", "unstable-widget-ref"]}
ratatui-explorer = "0.3.0"
ringbuffer = "0.16.0"
rodio = {version = "0.21.1", features = ["symphonia-all"]}
serde = { version = "1.0.225", features = ["derive"] }
spectrum-analyzer = "1.7.0"
symphonia = { version = "0.5.4" }
toml = "0.9.6"
tui-big-text = "0.8.2"

# [patch.crates-io]
# ratatui = {path = "../ratatui/ratatui"}
# ratatui-core = {path = "../ratatui/ratatui-core"}
# ratatui-widgets = {path = "../ratatui/ratatui-widgets"}
# ratatui-termwiz = {path = "../ratatui/ratatui-termwiz"}
# ratatui-macros = {path = "../ratatui/ratatui-macros"}
# ratatui-termion = {path = "../ratatui/ratatui-termion"}
# ratatui-crossterm = {path = "../ratatui/ratatui-crossterm"}

[profile.release]
strip = true
codegen-units = 1
panic = "abort"
lto = "thin"

[profile.profiling]
inherits = "release"
debug = 1
strip = false
